--- a/cricketProject/src/App.css
+++ b/cricketProject/src/App.css
@@ -87,7 +87,7 @@ span {
   font-family: saxena;
   src: url("/NCL Bujho Orgnist - Regular.ttf");
 }
-h1 {
+.heading-1 {
   margin-top: 3rem;
   font-family: saxena;
   font-size: 3rem;
