--- a/cricketProject/src/news.css
+++ b/cricketProject/src/news.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .body {
-  background-color: hsl(0, 0%, 50%);
+  background-color: hsl(0, 0%, 90%);
   min-height: 100vh;
   display: grid;
   place-items: center;
@@ -12,24 +12,27 @@
 img {
   width: 200px;
   height: 200px;
+  border-radius: 10px;
 }
 .grid {
-  width: 80%;
+  width: 60%;
   margin: 100px auto;
-  background-color: hsl(0, 0%, 50%);
+  background-color: transparent;
   display: grid;
-
   padding: 10px;
-  grid-template-rows: repeat(auto-fill, 300px);
+  grid-template-rows: auto;
   row-gap: 50px;
+  column-gap: 50px;
 }
 @media (width<1200px) {
   .grid {
-    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
+    width: 80%;
+    grid-template-columns: repeat(auto-fill, minmax(1fr, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(1fr, 1fr));
   }
 }
 .news-container {
-  background-color: hsl(0, 0%, 80%);
+  background-color: hsl(0, 0%, 50%);
   box-shadow: 0 0 15px 15px rgba(8, 5, 5, 0.678);
   padding: 10px;
   border-radius: 4px;
@@ -38,13 +41,19 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 20px;
 }
-input {
-  width: 80%;
+.inputNews {
+  width: 60%;
   height: 40px;
   letter-spacing: 0.1rem;
   text-align: center;
   margin: 100px auto;
+}
+@media (width<1200px) {
+  .inputNews {
+    width: 80%;
+  }
 }
 .loadingBody {
   width: 100%;
@@ -88,4 +97,9 @@ input {
   margin-top: 1rem;
   font-size: 3rem;
   letter-spacing: 0.8rem;
+  margin: auto;
+}
+.news-title {
+  font-weight: 500;
+  font-size: 2rem;
 }
