--- a/cricketProject/src/news.css
+++ b/cricketProject/src/news.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 .body {
+  width: 100vw;
+  height: 100%;
   background-color: hsl(0, 0%, 90%);
   min-height: 100vh;
   display: grid;
@@ -16,7 +18,8 @@ img {
 }
 .grid {
   width: 60%;
-  margin: 100px auto;
+  align-items: center;
+  justify-content: center;
   background-color: transparent;
   display: grid;
   padding: 10px;
@@ -33,11 +36,10 @@ img {
 }
 .news-container {
   background-color: hsl(0, 0%, 50%);
-  box-shadow: 0 0 15px 15px rgba(8, 5, 5, 0.678);
+  /* box-shadow: 0 0 15px 15px rgba(8, 5, 5, 0.678); */
   padding: 10px;
   border-radius: 4px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -89,15 +91,23 @@ img {
 }
 @font-face {
   font-family: tanishq-saxena;
-  src: url(../fonts/VIRUST.ttf);
+  src: url(../fonts/ArtisanParis-Regular.otf);
 }
+
 .newsHeading {
   text-shadow: 0 0 10px black;
+  text-align: center;
   font-family: tanishq-saxena;
+  font-weight: 900;
   margin-top: 1rem;
-  font-size: 3rem;
+  font-size: 8rem;
   letter-spacing: 0.8rem;
   margin: auto;
+}
+@media (width<1200px) {
+  .newsHeading {
+    font-size: 4rem;
+  }
 }
 .news-title {
   font-weight: 500;
