--- a/cricketProject/src/Home.css
+++ b/cricketProject/src/Home.css
@@ -3,10 +3,92 @@
   padding: 0;
   box-sizing: border-box;
 }
-.bodyHome {
+html {
+  font-size: 62.5%;
+  font-family: "urbanist";
+}
+p,
+li,
+a,
+button {
+  font-size: 1.7rem;
+  letter-spacing: 0.2rem;
+}
+header {
   width: 100%;
-  height: 100vh;
-  background-color: hsl(0, 0%, 90%);
+  height: 10rem;
+  background-color: #d4e6f1;
+}
+.home-container {
+  max-width: 100rem;
+  margin: auto;
+}
+.home-grid {
   display: grid;
-  place-items: center;
+}
+.navbar-grid {
+  grid-template-columns: 0.5fr 1fr;
+  grid-template-rows: 100px;
+  align-items: center;
+  padding: 0 3.2rem;
+}
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 3.2rem;
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: black;
+
+  &:hover {
+    color: #2e86e1;
+    text-shadow: 0 0 10px #78b0ec;
+    text-decoration: underline;
+    transition: all 0.5s ease-in-out;
+  }
+  &:active {
+    color: yellow;
+    transition: all 0s ease-in-out;
+  }
+}
+button {
+  color: white;
+  background-color: black;
+  padding: 1rem;
+  width: 5rem;
+  &:hover {
+    cursor: pointer;
+  }
+}
+.ham-menu {
+  display: none;
+}
+.menu-mobile {
+  position: absolute;
+  top: 10rem;
+  left: 0;
+  background-color: white;
+  width: 100%;
+}
+@media screen and (max-width: 998px) {
+  .menu-web {
+    display: none;
+  }
+  .ham-menu {
+    display: inline-block;
+    text-align: end;
+  }
+  .menu-mobile ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &li:first-child {
+      margin-top: 1.2rem;
+    }
+    &li:last-child {
+      margin-bottom: 1.2rem;
+    }
+  }
 }
